[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
files = "src"
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
